--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,4 +1,13 @@
 <mat-card class="user-detail-header">
+
+    <button mat-icon-button class="pin-right-upper-corner" [matMenuTriggerFor]="userMenu">
+        <mat-icon>more_vert</mat-icon>
+    </button>
+
+    <mat-menu #userMenu="matMenu">
+        <button mat-menu-item (click)="editMenu()">Edit</button>
+    </mat-menu>
+
     <img src="assets/img/profile.png">
 
     <div class="user-details">
@@ -12,9 +21,14 @@
 
 <mat-card class="mt-32">
 
-    <button mat-icon-button class="pin-right-upper-corner" (click)="openAdressDialog()">
+    <button mat-icon-button class="pin-right-upper-corner" [matMenuTriggerFor]="adressMenu">
         <mat-icon>more_vert</mat-icon>
     </button>
+
+    <mat-menu #adressMenu="matMenu">
+        <button mat-menu-item (click)="editUser()">Edit</button>
+    </mat-menu>
+
     <mat-card-title>Address</mat-card-title>
     <mat-card-content>
         {{ user.street }} <br>
